--- a/index.html
+++ b/index.html
@@ -16,25 +16,24 @@
     <meta property="og:description" content="Meta description for the page"/>
     <meta property="og:type" content="website" />
     <meta property="og:url" content="Official link for that page (https://www.site.com)"/>
-    <meta property="og:image" content="/assets/images/social.jpg"/>
+    <meta property="og:image" content="assets/images/social.jpg"/>
     <meta property="og:image:secure_url" content="/assets/images/social.jpg"/>
 
     <!--Favicons-->
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon-32x32.png?v1">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/favicon-16x16.png">
-    <link rel="manifest" href="/assets/favicons/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png?v1">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png">
+    <link rel="manifest" href="assets/favicons/site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
     <!-- Preload -->
     <link rel="preload" as="image" href="assets/images/logo-light.png">
-    <link rel="preload" as="font" type="font/woff2" href="/assets/fonts/roboto-v29-latin-regular.woff2" crossorigin>
-    <link rel="preload" as="font" type="font/woff2" href="/assets/fonts/roboto-v29-latin-700.woff2" crossorigin>
+    <link rel="preload" as="font" type="font/woff2" href="assets/fonts/roboto-v29-latin-regular.woff2" crossorigin>
+    <link rel="preload" as="font" type="font/woff2" href="assets/fonts/roboto-v29-latin-700.woff2" crossorigin>
 
     <link rel="stylesheet" href="css/core-styles.css">
     <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/dark.css">
 
     <title>Service Keyword Phrase | Company Name | City, State</title>
 </head>
@@ -49,7 +48,7 @@
     <header id="cs-navigation">
         <div class="cs-container">
             <!--Nav Logo-->
-            <a href="/index.html" class="cs-logo" aria-label="back to home">
+            <a href="index.html" class="cs-logo" aria-label="back to home">
                 <img src="assets/svgs/logo2.svg" alt="logo" width="210" height="29" aria-hidden="true" decoding="async">
             </a>
             <!--Navigation List-->
@@ -66,29 +65,29 @@
                 <div class="cs-ul-wrapper">
                     <ul id="cs-expanded" class="cs-ul" aria-expanded="false">
                         <li class="cs-li">
-                            <a href="/index.html" class="cs-li-link cs-active">
+                            <a href="index.html" class="cs-li-link cs-active">
                                 Home
                             </a>
                         </li>
                         <li class="cs-li">
-                            <a href="/about.html" class="cs-li-link">
+                            <a href="about.html" class="cs-li-link">
                                 About Us
                             </a>
                         </li>
                         <li class="cs-li">
-                            <a href="/reviews.html" class="cs-li-link">
+                            <a href="reviews.html" class="cs-li-link">
                                 Reviews
                             </a>
                         </li>
                         <li class="cs-li">
-                            <a href="/contact.html" class="cs-li-link">
+                            <a href="contact.html" class="cs-li-link">
                                 Contact Us
                             </a>
                         </li>
                     </ul>
                 </div>
             </nav>
-            <a href="/contact.html" class="cs-button-solid cs-nav-button">Contact Us</a>
+            <a href="contact.html" class="cs-button-solid cs-nav-button">Contact Us</a>
             <!--Dark Mode toggle, uncomment button code if you want to enable a dark mode toggle-->
         </div>
     </header>
@@ -109,7 +108,7 @@
 
             <!-- Background Image -->
             <picture class="cs-background">
-                <source media="(max-width: 600px)" srcset="/assets/images/pexels-leon-ardho-1552242-m.jpg">
+                <source media="(max-width: 600px)" srcset="assets/images/pexels-leon-ardho-1552242-m.jpg">
                 <source media="(min-width: 601px)" srcset="https://images.pexels.com/photos/1552242/pexels-photo-1552242.jpeg">
                 <img decoding="async" src="https://images.pexels.com/photos/1552242/pexels-photo-1552242.jpeg" alt="gym-photo" width="2250" height="1500" aria-hidden="true">
             </picture>
@@ -123,7 +122,7 @@
             <ul class="cs-card-group">
                 <li class="cs-item">
                     <picture class="cs-icon">
-                        <img loading="lazy" decoding="async" src="/assets/svgs/heartbeat.svg" alt="appliance" width="52" height="52" aria-hidden="true">
+                        <img loading="lazy" decoding="async" src="assets/svgs/heartbeat.svg" alt="appliance" width="52" height="52" aria-hidden="true">
                     </picture>
                     <h2 class="cs-title">Personalized Training Programs</h2>
                     <p class="cs-text">
@@ -132,7 +131,7 @@
                 </li>
                 <li class="cs-item">
                     <picture class="cs-icon">
-                        <img loading="lazy" decoding="async" src="/assets/svgs/yoga.svg" alt="appliance" width="52" height="52" aria-hidden="true">
+                        <img loading="lazy" decoding="async" src="assets/svgs/yoga.svg" alt="appliance" width="52" height="52" aria-hidden="true">
                     </picture>
                     <h2 class="cs-title">Group Fitness Classes</h2>
                     <p class="cs-text">
@@ -141,7 +140,7 @@
                 </li>
                 <li class="cs-item">
                     <picture class="cs-icon">
-                        <img loading="lazy" decoding="async" src="/assets/svgs/apple.svg" alt="appliance" width="52" height="52" aria-hidden="true">
+                        <img loading="lazy" decoding="async" src="assets/svgs/apple.svg" alt="appliance" width="52" height="52" aria-hidden="true">
                     </picture>
                     <h2 class="cs-title">Nutritional Counseling</h2>
                     <p class="cs-text">
@@ -159,10 +158,10 @@
             <div class="cs-container">
                 <picture class="cs-picture">
                     <!--Mobile Image-->
-                    <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/SideBySide/room.jpg">
+                    <source media="(max-width: 600px)" srcset="assets/images/pexels-pixabay-260352.jpg">
                     <!--Tablet and above Image-->
-                    <source media="(min-width: 601px)" srcset="/assets/images/pexels-pixabay-260352.jpg">
-                    <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/SideBySide/room.jpg" alt="room" width="494" height="700">
+                    <source media="(min-width: 601px)" srcset="assets/images/pexels-pixabay-260352.jpg">
+                    <img loading="lazy" decoding="async" src="assets/images/pexels-pixabay-260352.jpg" alt="room" width="494" height="700">
                 </picture>
                 <div class="cs-content">
                     <span class="cs-topper">Who We Are</span>
@@ -186,10 +185,10 @@
             <div class="cs-container">
                 <picture class="cs-picture">
                     <!--Mobile Image-->
-                    <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/SideBySide/room.jpg">
+                    <source media="(max-width: 600px)" srcset="assets/images/pexels-pixabay-416809.jpg">
                     <!--Tablet and above Image-->
-                    <source media="(min-width: 601px)" srcset="/assets/images/pexels-pixabay-416809.jpg">
-                    <img loading="lazy" decoding="async" src="https://csimg.nyc3.cdn.digitaloceanspaces.com/SideBySide/room.jpg" alt="room" width="494" height="700">
+                    <source media="(min-width: 601px)" srcset="assets/images/pexels-pixabay-416809.jpg">
+                    <img loading="lazy" decoding="async" src="assets/images/pexels-pixabay-416809.jpg" alt="room" width="494" height="700">
                 </picture>
                 <div class="cs-content">
                     <span class="cs-topper">What We Do</span>
@@ -378,9 +377,9 @@
             </div>
             <!-- Background Image-->
             <picture class="cs-picture">
-                <source media="(max-width: 600px)" srcset="/assets/images/pexels-andrea-piacquadio-903171-m.jpg">
-                <source media="(min-width: 601px)" srcset="/assets/images/pexels-andrea-piacquadio-903171.jpg">
-                <img loading="eager" decoding="async" src="/assets/images/pexels-andrea-piacquadio-903171.jpg" alt="cabinets" width="1920" height="1280" aria-hidden="true">
+                <source media="(max-width: 600px)" srcset="assets/images/pexels-andrea-piacquadio-903171-m.jpg">
+                <source media="(min-width: 601px)" srcset="assets/images/pexels-andrea-piacquadio-903171.jpg">
+                <img loading="eager" decoding="async" src="assets/images/pexels-andrea-piacquadio-903171.jpg" alt="cabinets" width="1920" height="1280" aria-hidden="true">
             </picture>
         </section>                                          
     </main>
@@ -449,8 +448,8 @@
     </footer>
                                 
 
-    <script defer src="/assets/js/nav.js"></script>
-    <script defer src="/assets/js/reviews.js"></script>
+    <script defer src="assets/js/nav.js"></script>
+    <script defer src="assets/js/reviews.js"></script>
 
     <!--Gallery JS-->
     <script>
