--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <meta property="og:description" content="Meta description for the page"/>
     <meta property="og:type" content="website" />
     <meta property="og:url" content="Official link for that page (https://www.site.com)"/>
-    <meta property="og:image" content="assets/images/social.jpg"/>
-    <meta property="og:image:secure_url" content="/assets/images/social.jpg"/>
+    <meta property="og:image" content="assets/images/social.webp"/>
+    <meta property="og:image:secure_url" content="/assets/images/social.webp"/>
 
     <!--Favicons-->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png">
@@ -108,7 +108,7 @@
 
             <!-- Background Image -->
             <picture class="cs-background">
-                <source media="(max-width: 600px)" srcset="assets/images/pexels-leon-ardho-1552242-m.jpg">
+                <source media="(max-width: 600px)" srcset="assets/images/pexels-leon-ardho-1552242-m.webp">
                 <source media="(min-width: 601px)" srcset="https://images.pexels.com/photos/1552242/pexels-photo-1552242.jpeg">
                 <img decoding="async" src="https://images.pexels.com/photos/1552242/pexels-photo-1552242.jpeg" alt="gym-photo" width="2250" height="1500" aria-hidden="true">
             </picture>
@@ -158,10 +158,10 @@
             <div class="cs-container">
                 <picture class="cs-picture">
                     <!--Mobile Image-->
-                    <source media="(max-width: 600px)" srcset="assets/images/pexels-pixabay-260352.jpg">
+                    <source media="(max-width: 600px)" srcset="assets/images/pexels-pixabay-260352.webp">
                     <!--Tablet and above Image-->
-                    <source media="(min-width: 601px)" srcset="assets/images/pexels-pixabay-260352.jpg">
-                    <img loading="lazy" decoding="async" src="assets/images/pexels-pixabay-260352.jpg" alt="room" width="494" height="700">
+                    <source media="(min-width: 601px)" srcset="assets/images/pexels-pixabay-260352.webp">
+                    <img loading="lazy" decoding="async" src="assets/images/pexels-pixabay-260352.webp" alt="room" width="494" height="700">
                 </picture>
                 <div class="cs-content">
                     <span class="cs-topper">Who We Are</span>
@@ -185,10 +185,10 @@
             <div class="cs-container">
                 <picture class="cs-picture">
                     <!--Mobile Image-->
-                    <source media="(max-width: 600px)" srcset="assets/images/pexels-pixabay-416809.jpg">
+                    <source media="(max-width: 600px)" srcset="assets/images/pexels-pixabay-416809-m.jpg">
                     <!--Tablet and above Image-->
-                    <source media="(min-width: 601px)" srcset="assets/images/pexels-pixabay-416809.jpg">
-                    <img loading="lazy" decoding="async" src="assets/images/pexels-pixabay-416809.jpg" alt="room" width="494" height="700">
+                    <source media="(min-width: 601px)" srcset="assets/images/pexels-pixabay-416809.webp">
+                    <img loading="lazy" decoding="async" src="assets/images/pexels-pixabay-416809.webp" alt="room" width="494" height="700">
                 </picture>
                 <div class="cs-content">
                     <span class="cs-topper">What We Do</span>
@@ -265,7 +265,7 @@
                 <ul class="cs-card-group">
                     <li class="cs-item">
                         <picture class="cs-picture">
-                            <img aria-hidden="true" loading="lazy" decoding="async" src="https://media.istockphoto.com/id/1147544807/vector/thumbnail-image-vector-graphic.jpg?s=612x612&w=0&k=20&c=rnCKVbdxqkjlcs3xH87-9gocETqpspHFXu5dIGB4wuM=" alt="portrait" width="275" height="132">
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="https://media.istockphoto.com/id/1147544807/vector/thumbnail-image-vector-graphic.webp?s=612x612&w=0&k=20&c=rnCKVbdxqkjlcs3xH87-9gocETqpspHFXu5dIGB4wuM=" alt="portrait" width="275" height="132">
                         </picture>
                         <span class="cs-name">Zachary</span>
                         <span class="cs-job-title">Nutritionist</span>
@@ -284,7 +284,7 @@
                     </li>
                     <li class="cs-item">
                         <picture class="cs-picture">
-                            <img aria-hidden="true" loading="lazy" decoding="async" src="https://media.istockphoto.com/id/1147544807/vector/thumbnail-image-vector-graphic.jpg?s=612x612&w=0&k=20&c=rnCKVbdxqkjlcs3xH87-9gocETqpspHFXu5dIGB4wuM=" alt="portrait" width="275" height="132">
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="https://media.istockphoto.com/id/1147544807/vector/thumbnail-image-vector-graphic.webp?s=612x612&w=0&k=20&c=rnCKVbdxqkjlcs3xH87-9gocETqpspHFXu5dIGB4wuM=" alt="portrait" width="275" height="132">
                         </picture>
                         <span class="cs-name">John</span>
                         <span class="cs-job-title">Ceritifed IFBB Pro</span>
@@ -303,7 +303,7 @@
                     </li>
                     <li class="cs-item">
                         <picture class="cs-picture">
-                            <img aria-hidden="true" loading="lazy" decoding="async" src="https://media.istockphoto.com/id/1147544807/vector/thumbnail-image-vector-graphic.jpg?s=612x612&w=0&k=20&c=rnCKVbdxqkjlcs3xH87-9gocETqpspHFXu5dIGB4wuM=" alt="portrait" width="275" height="132">
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="https://media.istockphoto.com/id/1147544807/vector/thumbnail-image-vector-graphic.webp?s=612x612&w=0&k=20&c=rnCKVbdxqkjlcs3xH87-9gocETqpspHFXu5dIGB4wuM=" alt="portrait" width="275" height="132">
                         </picture>
                         <span class="cs-name">Emily</span>
                         <span class="cs-job-title">Zen Connoisseur</span>
@@ -378,8 +378,8 @@
             <!-- Background Image-->
             <picture class="cs-picture">
                 <source media="(max-width: 600px)" srcset="assets/images/pexels-andrea-piacquadio-903171-m.jpg">
-                <source media="(min-width: 601px)" srcset="assets/images/pexels-andrea-piacquadio-903171.jpg">
-                <img loading="eager" decoding="async" src="assets/images/pexels-andrea-piacquadio-903171.jpg" alt="cabinets" width="1920" height="1280" aria-hidden="true">
+                <source media="(min-width: 601px)" srcset="assets/images/pexels-andrea-piacquadio-903171.webp">
+                <img loading="eager" decoding="async" src="assets/images/pexels-andrea-piacquadio-903171.webp" alt="cabinets" width="1920" height="1280" aria-hidden="true">
             </picture>
         </section>                                          
     </main>
