--- a/reviews.html
+++ b/reviews.html
@@ -16,8 +16,8 @@
     <meta property="og:description" content="Meta description for the page"/>
     <meta property="og:type" content="website" />
     <meta property="og:url" content="Official link for that page (https://www.site.com)"/>
-    <meta property="og:image" content="/assets/images/social.jpg"/>
-    <meta property="og:image:secure_url" content="/assets/images/social.jpg"/>
+    <meta property="og:image" content="/assets/images/social.webp"/>
+    <meta property="og:image:secure_url" content="/assets/images/social.webp"/>
 
     <!--Favicons-->
     <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png">
@@ -32,9 +32,9 @@
     <link rel="preload" as="font" type="font/woff2" href="/assets/fonts/roboto-v29-latin-regular.woff2" crossorigin>
     <link rel="preload" as="font" type="font/woff2" href="/assets/fonts/roboto-v29-latin-700.woff2" crossorigin>
 
-    <link rel="stylesheet" href="/css/core-styles.css">
-    <link rel="stylesheet" href="/css/reviews.css">
-    <link rel="stylesheet" href="/css/dark.css">
+    <link rel="stylesheet" href="css/core-styles.css">
+    <link rel="stylesheet" href="css/reviews.css">
+    <link rel="stylesheet" href="css/dark.css">
 
     <title>Service Keyword Phrase | Company Name | City, State</title>
 </head>
@@ -49,7 +49,7 @@
     <header id="cs-navigation">
         <div class="cs-container">
             <!--Nav Logo-->
-            <a href="/index.html" class="cs-logo" aria-label="back to home">
+            <a href="index.html" class="cs-logo" aria-label="back to home">
                 <img src="assets/svgs/logo2.svg" alt="logo" width="210" height="29" aria-hidden="true" decoding="async">
             </a>
             <!--Navigation List-->
@@ -66,29 +66,29 @@
                 <div class="cs-ul-wrapper">
                     <ul id="cs-expanded" class="cs-ul" aria-expanded="false">
                         <li class="cs-li">
-                            <a href="/index.html" class="cs-li-link">
+                            <a href="index.html" class="cs-li-link">
                                 Home
                             </a>
                         </li>
                         <li class="cs-li">
-                            <a href="/about.html" class="cs-li-link">
+                            <a href="about.html" class="cs-li-link">
                                 About Us
                             </a>
                         </li>
                         <li class="cs-li">
-                            <a href="/reviews.html" class="cs-li-link cs-active">
+                            <a href="reviews.html" class="cs-li-link cs-active">
                                 Reviews
                             </a>
                         </li>
                         <li class="cs-li">
-                            <a href="/contact.html" class="cs-li-link">
+                            <a href="contact.html" class="cs-li-link">
                                 Contact Us
                             </a>
                         </li>
                     </ul>
                 </div>
             </nav>
-            <a href="/contact.html" class="cs-button-solid cs-nav-button">Contact Us</a>
+            <a href="contact.html" class="cs-button-solid cs-nav-button">Contact Us</a>
             <!--Dark Mode toggle, uncomment button code if you want to enable a dark mode toggle-->
         </div>
     </header>
@@ -105,10 +105,10 @@
             <!--Background Image-->
             <picture class="cs-background">
                 <!--Mobile Image-->
-                <source media="(max-width: 600px)" srcset="assets/images/pexels-victor-freitas-949126-m.jpg">
+                <source media="(max-width: 600px)" srcset="assets/images/pexels-victor-freitas-949126-m.webp">
                 <!--Tablet and above Image-->
-                <source media="(min-width: 601px)" srcset="assets/images/pexels-victor-freitas-949126.jpg">
-                <img loading="lazy" decoding="async" src="assets/images/pexels-victor-freitas-949126.jpg" alt="pills" width="1280" height="568" aria-hidden="true">
+                <source media="(min-width: 601px)" srcset="assets/images/pexels-victor-freitas-949126.webp">
+                <img loading="lazy" decoding="async" src="assets/images/pexels-victor-freitas-949126.webp" alt="pills" width="1280" height="568" aria-hidden="true">
             </picture>
         </div>
 
@@ -219,9 +219,9 @@
             </div>
             <!-- Background Image-->
             <picture class="cs-picture">
-                <source media="(max-width: 600px)" srcset="/assets/images/pexels-andrea-piacquadio-903171-m.jpg">
-                <source media="(min-width: 601px)" srcset="/assets/images/pexels-andrea-piacquadio-903171.jpg">
-                <img loading="eager" decoding="async" src="/assets/images/pexels-andrea-piacquadio-903171.jpg" alt="cabinets" width="1920" height="1280" aria-hidden="true">
+                <source media="(max-width: 600px)" srcset="/assets/images/pexels-andrea-piacquadio-903171-m.webp">
+                <source media="(min-width: 601px)" srcset="/assets/images/pexels-andrea-piacquadio-903171.webp">
+                <img loading="eager" decoding="async" src="/assets/images/pexels-andrea-piacquadio-903171.webp" alt="cabinets" width="1920" height="1280" aria-hidden="true">
             </picture>
         </section>                                          
     </main>
