--- a/contact.html
+++ b/contact.html
@@ -16,25 +16,25 @@
     <meta property="og:description" content="Meta description for the page"/>
     <meta property="og:type" content="website" />
     <meta property="og:url" content="Official link for that page (https://www.site.com)"/>
-    <meta property="og:image" content="/assets/images/social.jpg"/>
-    <meta property="og:image:secure_url" content="/assets/images/social.jpg"/>
+    <meta property="og:image" content="assets/images/social.webp"/>
+    <meta property="og:image:secure_url" content="assets/images/social.webp"/>
 
     <!--Favicons-->
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon-32x32.png?v1">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/favicon-16x16.png">
-    <link rel="manifest" href="/assets/favicons/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png?v1">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png">
+    <link rel="manifest" href="assets/favicons/site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
     <!-- Preload -->
     <link rel="preload" as="image" href="assets/images/logo-light.png">
-    <link rel="preload" as="font" type="font/woff2" href="/assets/fonts/roboto-v29-latin-regular.woff2" crossorigin>
-    <link rel="preload" as="font" type="font/woff2" href="/assets/fonts/roboto-v29-latin-700.woff2" crossorigin>
+    <link rel="preload" as="font" type="font/woff2" href="assets/fonts/roboto-v29-latin-regular.woff2" crossorigin>
+    <link rel="preload" as="font" type="font/woff2" href="assets/fonts/roboto-v29-latin-700.woff2" crossorigin>
 
-    <link rel="stylesheet" href="/css/core-styles.css">
-    <link rel="stylesheet" href="/css/contact.css">
-    <link rel="stylesheet" href="/css/dark.css">
+    <link rel="stylesheet" href="css/core-styles.css">
+    <link rel="stylesheet" href="css/contact.css">
+    <link rel="stylesheet" href="css/dark.css">
 
     <title>Service Keyword Phrase | Company Name | City, State</title>
 </head>
@@ -49,7 +49,7 @@
     <header id="cs-navigation">
         <div class="cs-container">
             <!--Nav Logo-->
-            <a href="/index.html" class="cs-logo" aria-label="back to home">
+            <a href="index.html" class="cs-logo" aria-label="back to home">
                 <img src="assets/svgs/logo2.svg" alt="logo" width="210" height="29" aria-hidden="true" decoding="async">
             </a>
             <!--Navigation List-->
@@ -66,29 +66,29 @@
                 <div class="cs-ul-wrapper">
                     <ul id="cs-expanded" class="cs-ul" aria-expanded="false">
                         <li class="cs-li">
-                            <a href="/index.html" class="cs-li-link">
+                            <a href="index.html" class="cs-li-link">
                                 Home
                             </a>
                         </li>
                         <li class="cs-li">
-                            <a href="/about.html" class="cs-li-link">
+                            <a href="about.html" class="cs-li-link">
                                 About Us
                             </a>
                         </li>
                         <li class="cs-li">
-                            <a href="/reviews.html" class="cs-li-link">
+                            <a href="reviews.html" class="cs-li-link">
                                 Reviews
                             </a>
                         </li>
                         <li class="cs-li">
-                            <a href="/contact.html" class="cs-li-link  cs-active">
+                            <a href="contact.html" class="cs-li-link  cs-active">
                                 Contact Us
                             </a>
                         </li>
                     </ul>
                 </div>
             </nav>
-            <a href="/contact.html" class="cs-button-solid cs-nav-button">Contact Us</a>
+            <a href="contact.html" class="cs-button-solid cs-nav-button">Contact Us</a>
             <!--Dark Mode toggle, uncomment button code if you want to enable a dark mode toggle-->
         </div>
     </header>
@@ -105,10 +105,10 @@
             <!--Background Image-->
             <picture class="cs-background">
                 <!--Mobile Image-->
-                <source media="(max-width: 600px)" srcset="assets/images/pexels-cottonbro-studio-4761785-m.jpg">
+                <source media="(max-width: 600px)" srcset="assets/images/pexels-cottonbro-studio-4761785-m.webp">
                 <!--Tablet and above Image-->
-                <source media="(min-width: 601px)" srcset="assets/images/pexels-cottonbro-studio-4761785.jpg">
-                <img loading="lazy" decoding="async" src="assets/images/pexels-cottonbro-studio-4761785.jpg" alt="pills" width="1280" height="568" aria-hidden="true">
+                <source media="(min-width: 601px)" srcset="assets/images/pexels-cottonbro-studio-4761785.webp">
+                <img loading="lazy" decoding="async" src="assets/images/pexels-cottonbro-studio-4761785.webp" alt="pills" width="1280" height="568" aria-hidden="true">
             </picture>
         </div>
 
@@ -163,9 +163,9 @@
 
                     <!-- Background Image-->
                     <picture class="cs-bg-picture">
-                        <source media="(max-width: 600px)" srcset="assets/images/pexels-li-sun-371049-m.jpg">
-                        <source media="(min-width: 601px)" srcset="assets/images/pexels-cottonbro-studio-4761779.jpg">
-                        <img loading="lazy" decoding="async" src="assets/images/pexels-cottonbro-studio-4761779.jpg" alt="Side-photo" width="542" height="662" aria-hidden="true">
+                        <source media="(max-width: 600px)" srcset="assets/images/pexels-li-sun-371049-m.webp">
+                        <source media="(min-width: 601px)" srcset="assets/images/pexels-cottonbro-studio-4761779.webp">
+                        <img loading="lazy" decoding="async" src="assets/images/pexels-cottonbro-studio-4761779.webp" alt="Side-photo" width="542" height="662" aria-hidden="true">
                     </picture>
                 </div>
             </div>
@@ -237,6 +237,6 @@
     </footer>
                                 
 
-    <script defer src="/assets/js/nav.js"></script>
+    <script defer src="assets/js/nav.js"></script>
 </body>
 </html>
