--- a/about.html
+++ b/about.html
@@ -16,25 +16,25 @@
     <meta property="og:description" content="Meta description for the page"/>
     <meta property="og:type" content="website" />
     <meta property="og:url" content="Official link for that page (https://www.site.com)"/>
-    <meta property="og:image" content="/assets/images/social.jpg"/>
-    <meta property="og:image:secure_url" content="/assets/images/social.jpg"/>
+    <meta property="og:image" content="assets/images/social.webp"/>
+    <meta property="og:image:secure_url" content="assets/images/social.webp"/>
 
     <!--Favicons-->
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon-32x32.png?v1">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/favicon-16x16.png">
-    <link rel="manifest" href="/assets/favicons/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicons/favicon-32x32.png?v1">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png">
+    <link rel="manifest" href="assets/favicons/site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
     <!-- Preload -->
     <link rel="preload" as="image" href="assets/images/logo-light.png">
-    <link rel="preload" as="font" type="font/woff2" href="/assets/fonts/roboto-v29-latin-regular.woff2" crossorigin>
-    <link rel="preload" as="font" type="font/woff2" href="/assets/fonts/roboto-v29-latin-700.woff2" crossorigin>
+    <link rel="preload" as="font" type="font/woff2" href="assets/fonts/roboto-v29-latin-regular.woff2" crossorigin>
+    <link rel="preload" as="font" type="font/woff2" href="assets/fonts/roboto-v29-latin-700.woff2" crossorigin>
 
-    <link rel="stylesheet" href="/css/core-styles.css">
-    <link rel="stylesheet" href="/css/about.css">
-    <link rel="stylesheet" href="/css/dark.css">
+    <link rel="stylesheet" href="css/core-styles.css">
+    <link rel="stylesheet" href="css/about.css">
+    <link rel="stylesheet" href="css/dark.css">
 
     <title>Service Keyword Phrase | Company Name | City, State</title>
 </head>
@@ -49,7 +49,7 @@
     <header id="cs-navigation">
         <div class="cs-container">
             <!--Nav Logo-->
-            <a href="/index.html" class="cs-logo" aria-label="back to home">
+            <a href="index.html" class="cs-logo" aria-label="back to home">
                 <img src="assets/svgs/logo2.svg" alt="logo" width="210" height="29" aria-hidden="true" decoding="async">
             </a>
             <!--Navigation List-->
@@ -66,29 +66,29 @@
                 <div class="cs-ul-wrapper">
                     <ul id="cs-expanded" class="cs-ul" aria-expanded="false">
                         <li class="cs-li">
-                            <a href="/index.html" class="cs-li-link">
+                            <a href="index.html" class="cs-li-link">
                                 Home
                             </a>
                         </li>
                         <li class="cs-li">
-                            <a href="/about.html" class="cs-li-link cs-active">
+                            <a href="about.html" class="cs-li-link cs-active">
                                 About Us
                             </a>
                         </li>
                         <li class="cs-li">
-                            <a href="/reviews.html" class="cs-li-link">
+                            <a href="reviews.html" class="cs-li-link">
                                 Reviews
                             </a>
                         </li>
                         <li class="cs-li">
-                            <a href="/contact.html" class="cs-li-link">
+                            <a href="contact.html" class="cs-li-link">
                                 Contact Us
                             </a>
                         </li>
                     </ul>
                 </div>
             </nav>
-            <a href="/contact.html" class="cs-button-solid cs-nav-button">Contact Us</a>
+            <a href="contact.html" class="cs-button-solid cs-nav-button">Contact Us</a>
             <!--Dark Mode toggle, uncomment button code if you want to enable a dark mode toggle-->
         </div>
     </header>
@@ -105,10 +105,10 @@
             <!--Background Image-->
             <picture class="cs-background">
                 <!--Mobile Image-->
-                <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images%2FMISC%2Fpills.jpg">
+                <source media="(max-width: 600px)" srcset="https://csimg.nyc3.cdn.digitaloceanspaces.com/Images%2FMISC%2Fpills.webp">
                 <!--Tablet and above Image-->
-                <source media="(min-width: 601px)" srcset="/assets/images/pexels-william-choquette-1954524.jpg">
-                <img loading="lazy" decoding="async" src="pexels-william-choquette-1954524.jpg" alt="pills" width="1280" height="568" aria-hidden="true">
+                <source media="(min-width: 601px)" srcset="assets/images/pexels-william-choquette-1954524.webp">
+                <img loading="lazy" decoding="async" src="pexels-william-choquette-1954524.webp" alt="pills" width="1280" height="568" aria-hidden="true">
             </picture>
         </div>
 
@@ -120,10 +120,10 @@
             <div class="cs-container">
                 <picture class="cs-picture">
                     <!--Mobile Image-->
-                    <source media="(max-width: 600px)" srcset="/assets/images/pexels-victor-freitas-703012.jpg">
+                    <source media="(max-width: 600px)" srcset="assets/images/pexels-victor-freitas-703012.webp">
                     <!--Tablet and above Image-->
-                    <source media="(min-width: 601px)" srcset="/assets/images/pexels-leon-ardho-1552106.jpg">
-                    <img loading="lazy" decoding="async" src="/assets/images/pexels-leon-ardho-1552106.jpg" alt="room" width="494" height="700">
+                    <source media="(min-width: 601px)" srcset="assets/images/pexels-leon-ardho-1552106.webp">
+                    <img loading="lazy" decoding="async" src="assets/images/pexels-leon-ardho-1552106.webp" alt="room" width="494" height="700">
                 </picture>
                 <div class="cs-content">
                     <span class="cs-topper">What We Do</span>
@@ -202,9 +202,9 @@
             </div>
             <!-- Background Image-->
             <picture class="cs-picture">
-                <source media="(max-width: 600px)" srcset="/assets/images/pexels-andrea-piacquadio-903171-m.jpg">
-                <source media="(min-width: 601px)" srcset="/assets/images/pexels-andrea-piacquadio-903171.jpg">
-                <img loading="lazy" decoding="async" src="/assets/images/pexels-andrea-piacquadio-903171.jpg" alt="cabinets" width="1920" height="1280" aria-hidden="true">
+                <source media="(max-width: 600px)" srcset="assets/images/pexels-andrea-piacquadio-903171-m.webp">
+                <source media="(min-width: 601px)" srcset="assets/images/pexels-andrea-piacquadio-903171.webp">
+                <img loading="lazy" decoding="async" src="assets/images/pexels-andrea-piacquadio-903171.webp" alt="cabinets" width="1920" height="1280" aria-hidden="true">
             </picture>
         </section>                                          
     </main>
@@ -273,6 +273,6 @@
     </footer>
                                 
 
-    <script defer src="/assets/js/nav.js"></script>
+    <script defer src="assets/js/nav.js"></script>
 </body>
 </html>
