--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="css/core-styles.css">
     <link rel="stylesheet" href="css/index.css">
 
-    <title>Service Keyword Phrase | Company Name | City, State</title>
+    <title>Micro Gym | B3 Fitness | Gilbert, Arizona</title>
 </head>
 <body>
     <!--Screen reader skip main nav-->
