--- a/about.html
+++ b/about.html
@@ -159,7 +159,7 @@
                         </picture>
                         <h3 class="cs-h3">Holistic Approach</h3>
                         <p class="cs-item-text">
-                            At B3 Fitness, we prioritize holistic wellness, offering not just workouts but a supportive community, personalized training.s. 
+                            At B3 Fitness, we prioritize holistic wellness, offering not just workouts but a supportive community, and personalized trainings.
                         </p>
                     </li>
                     <li class="cs-item">
