--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
     <link rel="stylesheet" href="css/contact.css">
     <link rel="stylesheet" href="css/dark.css">
 
-    <title>Service Keyword Phrase | Company Name | City, State</title>
+    <title>Micro Gym | B3 Fitness | Gilbert, Arizona</title>
 </head>
 <body>
     <!--Screen reader skip main nav-->
