--- a/reviews.html
+++ b/reviews.html
@@ -219,9 +219,9 @@
             </div>
             <!-- Background Image-->
             <picture class="cs-picture">
-                <source media="(max-width: 600px)" srcset="/assets/images/pexels-andrea-piacquadio-903171-m.webp">
-                <source media="(min-width: 601px)" srcset="/assets/images/pexels-andrea-piacquadio-903171.webp">
-                <img loading="eager" decoding="async" src="/assets/images/pexels-andrea-piacquadio-903171.webp" alt="cabinets" width="1920" height="1280" aria-hidden="true">
+                <source media="(max-width: 600px)" srcset="assets/images/pexels-andrea-piacquadio-903171-m.jpg">
+                <source media="(min-width: 601px)" srcset="assets/images/pexels-andrea-piacquadio-903171.webp">
+                <img loading="eager" decoding="async" src="assets/images/pexels-andrea-piacquadio-903171.webp" alt="cabinets" width="1920" height="1280" aria-hidden="true">
             </picture>
         </section>                                          
     </main>
